--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -31,21 +31,21 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][17][Applets][193][Configuration]
-PreloadWeight=0
+PreloadWeight=34
 
 [Containments][17][Applets][89]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][17][Applets][89][Configuration]
-PreloadWeight=5
+PreloadWeight=10
 
 [Containments][17][Applets][91]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][17][Applets][91][Configuration]
-PreloadWeight=27
+PreloadWeight=67
 
 [Containments][17][Applets][91][Configuration][ConfigDialog]
 DialogHeight=558
@@ -53,21 +53,20 @@ DialogWidth=720
 
 [Containments][17][Applets][91][Configuration][General]
 volumeFeedback=false
-volumeStep=10
 
 [Containments][17][Applets][94]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][17][Applets][94][Configuration]
-PreloadWeight=17
+PreloadWeight=22
 
 [Containments][17][Applets][96]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][17][Applets][96][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][17][ConfigDialog]
 DialogHeight=744
@@ -77,9 +76,9 @@ DialogWidth=963
 PreloadWeight=26
 
 [Containments][17][General]
-extraItems=org.kde.plasma.mediacontroller,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod
+extraItems=org.kde.plasma.mediacontroller,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
 hiddenItems=org.kde.kdeconnect,SimpleScreenRecorder,Discord,discord
-knownItems=org.kde.plasma.keyboardindicator,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.keyboardlayout,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.nightcolorcontrol,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod
+knownItems=org.kde.plasma.keyboardindicator,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.keyboardlayout,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.nightcolorcontrol,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
 shownItems=org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.networkmanagement
 
 [Containments][19]
@@ -173,7 +172,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=0
+PreloadWeight=25
 
 [Containments][19][Applets][188]
 immutability=1
