--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -26,20 +26,26 @@ plugin=org.kde.plasma.vault
 [Containments][17][Applets][19][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][193]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][17][Applets][193][Configuration]
-PreloadWeight=0
-
 [Containments][17][Applets][198]
 immutability=1
 plugin=org.kde.kdeconnect
 
+[Containments][17][Applets][198][Configuration]
+PreloadWeight=0
+
 [Containments][17][Applets][199]
 immutability=1
 plugin=org.kde.plasma.manage-inputmethod
+
+[Containments][17][Applets][199][Configuration]
+PreloadWeight=0
+
+[Containments][17][Applets][202]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][17][Applets][202][Configuration]
+PreloadWeight=0
 
 [Containments][17][Applets][89]
 immutability=1
@@ -53,7 +59,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][17][Applets][91][Configuration]
-PreloadWeight=51
+PreloadWeight=27
 
 [Containments][17][Applets][91][Configuration][ConfigDialog]
 DialogHeight=558
@@ -67,7 +73,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][17][Applets][94][Configuration]
-PreloadWeight=6
+PreloadWeight=45
 
 [Containments][17][Applets][96]
 immutability=1
@@ -138,10 +144,7 @@ isInLatteDock=true
 isPreferredForDroppedLaunchers=false
 launchers59=applications:org.kde.konsole.desktop,applications:org.kde.dolphin.desktop,applications:org.mozilla.firefox.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,file:///latte-separator1.desktop
 manualScrollTasksType=Disabled
-showAudioBadge=false
-showOnlyCurrentDesktop=true
 showOnlyCurrentScreen=true
-showWindowsOnlyFromLaunchers=true
 
 [Containments][19][Applets][174]
 immutability=1
@@ -185,18 +188,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=9
-
-[Containments][19][Applets][188]
-immutability=1
-plugin=org.kde.netspeedWidget
-
-[Containments][19][Applets][188][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][188][Configuration][ConfigDialog]
-DialogHeight=744
-DialogWidth=960
+PreloadWeight=5
 
 [Containments][19][Applets][191]
 immutability=1
@@ -210,7 +202,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][192][Configuration]
-PreloadWeight=5
+PreloadWeight=56
 
 [Containments][19][Applets][192][Configuration][Appearance]
 chartFace=org.kde.ksysguard.horizontalbars
@@ -218,6 +210,28 @@ chartFace=org.kde.ksysguard.horizontalbars
 [Containments][19][Applets][192][Configuration][ConfigDialog]
 DialogHeight=720
 DialogWidth=960
+
+[Containments][19][Applets][192][Configuration][FaceGrid][Appearance]
+chartFace=org.kde.ksysguard.linechart
+showTitle=false
+
+[Containments][19][Applets][192][Configuration][FaceGrid][SensorColors]
+cpu/all/usage=61,137,233
+cpu/cpu age=233,76,61
+cpu/cpu0/usage=61,174,233
+cpu/cpu1/usage=77,61,233
+cpu/cpu2/usage=206,61,233
+cpu/cpu3/usage=233,61,131
+cpu/cpu4/usage=233,120,61
+cpu/cpu5/usage=217,233,61
+cpu/cpu6/usage=88,233,61
+cpu/cpu7/usage=61,233,163
+gpu/all/usage=233,137,61
+gpu/gpu0/usage=61,231,233
+memory/physical/applicationPercent=147,61,233
+
+[Containments][19][Applets][192][Configuration][FaceGrid][Sensors]
+highPrioritySensorIds=["gpu/gpu0/usage"]
 
 [Containments][19][Applets][192][Configuration][SensorColors]
 cpu/all/usage=61,137,233
@@ -230,11 +244,59 @@ cpu/cpu4/usage=233,120,61
 cpu/cpu5/usage=217,233,61
 cpu/cpu6/usage=88,233,61
 cpu/cpu7/usage=61,233,163
+gpu/all/usage=233,137,61
 gpu/gpu0/usage=61,231,233
 memory/physical/applicationPercent=147,61,233
 
+[Containments][19][Applets][192][Configuration][SensorLabels]
+cpu/all/usage=CPU
+gpu/gpu0/usage=NGPU
+memory/physical/applicationPercent=Memory
+
 [Containments][19][Applets][192][Configuration][Sensors]
 highPrioritySensorIds=["cpu/all/usage","memory/physical/applicationPercent","gpu/gpu0/usage"]
+
+[Containments][19][Applets][201]
+immutability=1
+plugin=org.kde.plasma.systemmonitor
+
+[Containments][19][Applets][201][Configuration]
+PreloadWeight=76
+
+[Containments][19][Applets][201][Configuration][Appearance]
+chartFace=org.kde.ksysguard.barchart
+showTitle=true
+title=Network speed
+updateRateLimit=500
+
+[Containments][19][Applets][201][Configuration][ConfigDialog]
+DialogHeight=720
+DialogWidth=960
+
+[Containments][19][Applets][201][Configuration][FaceGrid][Appearance]
+chartFace=org.kde.ksysguard.linechart
+showTitle=false
+
+[Containments][19][Applets][201][Configuration][FaceGrid][SensorColors]
+network/all/download=61,174,233
+network/all/upload=233,120,61
+
+[Containments][19][Applets][201][Configuration][FaceGrid][Sensors]
+highPrioritySensorIds=["network/all/download"]
+
+[Containments][19][Applets][201][Configuration][SensorColors]
+network/all/download=61,174,233
+network/all/upload=233,120,61
+
+[Containments][19][Applets][201][Configuration][Sensors]
+highPrioritySensorIds=["network/all/download","network/all/upload"]
+lowPrioritySensorIds=[]
+
+[Containments][19][Applets][201][Configuration][org.kde.ksysguard.barchart][General]
+rangeAuto=false
+rangeTo=10
+rangeToMultiplier=1048576
+rangeToUnit=202
 
 [Containments][19][ConfigDialog]
 DialogHeight=1254
@@ -247,7 +309,7 @@ PreloadWeight=0
 advanced=true
 alignment=10
 alignmentUpgraded=true
-appletOrder=184;191;170;188;192;114;174;185
+appletOrder=184;191;170;201;192;114;174;185
 autoDecreaseIconSize=false
 autoSizeEnabled=false
 backgroundRadius=7
