--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -31,7 +31,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][17][Applets][198][Configuration]
-PreloadWeight=0
+PreloadWeight=2
 
 [Containments][17][Applets][199]
 immutability=1
@@ -59,7 +59,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][17][Applets][91][Configuration]
-PreloadWeight=27
+PreloadWeight=29
 
 [Containments][17][Applets][91][Configuration][ConfigDialog]
 DialogHeight=558
@@ -73,14 +73,14 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][17][Applets][94][Configuration]
-PreloadWeight=45
+PreloadWeight=100
 
 [Containments][17][Applets][96]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][17][Applets][96][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][17][ConfigDialog]
 DialogHeight=744
@@ -142,7 +142,7 @@ hoverAction=PreviewWindows
 infoBadgeProminentColorEnabled=true
 isInLatteDock=true
 isPreferredForDroppedLaunchers=false
-launchers59=applications:org.kde.konsole.desktop,applications:org.kde.dolphin.desktop,applications:org.mozilla.firefox.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,file:///latte-separator1.desktop
 manualScrollTasksType=Disabled
 showOnlyCurrentScreen=true
 
@@ -151,7 +151,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][19][Applets][174][Configuration]
-PreloadWeight=0
+PreloadWeight=15
 
 [Containments][19][Applets][174][Configuration][Appearance]
 customDateFormat=ddd dd MMM
@@ -188,7 +188,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][19][Applets][191]
 immutability=1
@@ -202,7 +202,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][192][Configuration]
-PreloadWeight=56
+PreloadWeight=48
 
 [Containments][19][Applets][192][Configuration][Appearance]
 chartFace=org.kde.ksysguard.horizontalbars
@@ -261,7 +261,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][201][Configuration]
-PreloadWeight=76
+PreloadWeight=100
 
 [Containments][19][Applets][201][Configuration][Appearance]
 chartFace=org.kde.ksysguard.barchart
