--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -31,7 +31,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][17][Applets][198][Configuration]
-PreloadWeight=2
+PreloadWeight=37
 
 [Containments][17][Applets][199]
 immutability=1
@@ -47,6 +47,10 @@ plugin=org.kde.plasma.mediacontroller
 [Containments][17][Applets][202][Configuration]
 PreloadWeight=0
 
+[Containments][17][Applets][202][Configuration][ConfigDialog]
+DialogHeight=720
+DialogWidth=960
+
 [Containments][17][Applets][89]
 immutability=1
 plugin=org.kde.plasma.battery
@@ -59,7 +63,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][17][Applets][91][Configuration]
-PreloadWeight=29
+PreloadWeight=69
 
 [Containments][17][Applets][91][Configuration][ConfigDialog]
 DialogHeight=558
@@ -80,7 +84,7 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][17][Applets][96][Configuration]
-PreloadWeight=5
+PreloadWeight=20
 
 [Containments][17][ConfigDialog]
 DialogHeight=744
@@ -91,7 +95,7 @@ PreloadWeight=26
 
 [Containments][17][General]
 extraItems=org.kde.plasma.mediacontroller,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
-hiddenItems=org.kde.kdeconnect,SimpleScreenRecorder,Discord,discord
+hiddenItems=SimpleScreenRecorder,Discord,discord
 knownItems=org.kde.plasma.keyboardindicator,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.keyboardlayout,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.nightcolorcontrol,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
 shownItems=org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.networkmanagement
 
@@ -142,7 +146,7 @@ hoverAction=PreviewWindows
 infoBadgeProminentColorEnabled=true
 isInLatteDock=true
 isPreferredForDroppedLaunchers=false
-launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,applications:io.github.Icalingua.Icalingua.desktop,applications:com.qq.Wechat.desktop,file:///latte-separator1.desktop
 manualScrollTasksType=Disabled
 showOnlyCurrentScreen=true
 
@@ -188,7 +192,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=0
+PreloadWeight=45
 
 [Containments][19][Applets][191]
 immutability=1
@@ -202,7 +206,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][192][Configuration]
-PreloadWeight=48
+PreloadWeight=63
 
 [Containments][19][Applets][192][Configuration][Appearance]
 chartFace=org.kde.ksysguard.horizontalbars
