--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -84,7 +84,7 @@ immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][17][Applets][96][Configuration]
-PreloadWeight=20
+PreloadWeight=40
 
 [Containments][17][ConfigDialog]
 DialogHeight=744
@@ -95,7 +95,7 @@ PreloadWeight=26
 
 [Containments][17][General]
 extraItems=org.kde.plasma.mediacontroller,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
-hiddenItems=SimpleScreenRecorder,Discord,discord
+hiddenItems=SimpleScreenRecorder,Discord,discord,CopyQ
 knownItems=org.kde.plasma.keyboardindicator,org.kde.plasma.devicenotifier,org.kde.plasma.mediacontroller,org.kde.plasma.keyboardlayout,org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement,org.kde.plasma.nightcolorcontrol,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.bluetooth,org.kde.plasma.printmanager,org.kde.plasma.vault,org.kde.plasma.manage-inputmethod,org.kde.kdeconnect
 shownItems=org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.networkmanagement
 
@@ -146,7 +146,7 @@ hoverAction=PreviewWindows
 infoBadgeProminentColorEnabled=true
 isInLatteDock=true
 isPreferredForDroppedLaunchers=false
-launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,applications:io.github.Icalingua.Icalingua.desktop,applications:com.qq.Wechat.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,applications:io.github.Icalingua.Icalingua.desktop,applications:com.tencent.weixin.desktop,file:///latte-separator1.desktop
 manualScrollTasksType=Disabled
 showOnlyCurrentScreen=true
 
@@ -155,7 +155,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][19][Applets][174][Configuration]
-PreloadWeight=15
+PreloadWeight=45
 
 [Containments][19][Applets][174][Configuration][Appearance]
 customDateFormat=ddd dd MMM
@@ -192,7 +192,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=45
+PreloadWeight=65
 
 [Containments][19][Applets][191]
 immutability=1
@@ -206,7 +206,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][192][Configuration]
-PreloadWeight=63
+PreloadWeight=73
 
 [Containments][19][Applets][192][Configuration][Appearance]
 chartFace=org.kde.ksysguard.horizontalbars
