--- a/.config/latte/Windows 11 Layout.layout.latte
+++ b/.config/latte/Windows 11 Layout.layout.latte
@@ -31,7 +31,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][17][Applets][198][Configuration]
-PreloadWeight=37
+PreloadWeight=13
 
 [Containments][17][Applets][199]
 immutability=1
@@ -47,10 +47,6 @@ plugin=org.kde.plasma.mediacontroller
 [Containments][17][Applets][202][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][202][Configuration][ConfigDialog]
-DialogHeight=720
-DialogWidth=960
-
 [Containments][17][Applets][89]
 immutability=1
 plugin=org.kde.plasma.battery
@@ -63,7 +59,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][17][Applets][91][Configuration]
-PreloadWeight=69
+PreloadWeight=60
 
 [Containments][17][Applets][91][Configuration][ConfigDialog]
 DialogHeight=558
@@ -77,14 +73,14 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][17][Applets][94][Configuration]
-PreloadWeight=100
+PreloadWeight=84
 
 [Containments][17][Applets][96]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
 [Containments][17][Applets][96][Configuration]
-PreloadWeight=40
+PreloadWeight=16
 
 [Containments][17][ConfigDialog]
 DialogHeight=744
@@ -128,7 +124,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][19][Applets][114][Configuration]
-PreloadWeight=100
+PreloadWeight=84
 SystrayContainmentId=17
 
 [Containments][19][Applets][170]
@@ -146,7 +142,7 @@ hoverAction=PreviewWindows
 infoBadgeProminentColorEnabled=true
 isInLatteDock=true
 isPreferredForDroppedLaunchers=false
-launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,applications:io.github.Icalingua.Icalingua.desktop,applications:com.tencent.weixin.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.konsole.desktop,applications:org.mozilla.firefox.desktop,applications:org.kde.dolphin.desktop,applications:com.valvesoftware.Steam.desktop,applications:net.cozic.joplin_desktop.desktop,applications:com.visualstudio.code.desktop,applications:org.telegram.desktop.desktop,applications:io.github.Icalingua.Icalingua.desktop,applications:com.tencent.weixin.desktop,file:///latte-separator1.desktop,applications:com.microsoft.Edge.desktop
 manualScrollTasksType=Disabled
 showOnlyCurrentScreen=true
 
@@ -155,7 +151,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][19][Applets][174][Configuration]
-PreloadWeight=45
+PreloadWeight=36
 
 [Containments][19][Applets][174][Configuration][Appearance]
 customDateFormat=ddd dd MMM
@@ -192,7 +188,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][19][Applets][185][Configuration]
-PreloadWeight=65
+PreloadWeight=41
 
 [Containments][19][Applets][191]
 immutability=1
@@ -201,12 +197,16 @@ plugin=org.kde.plasma.pager
 [Containments][19][Applets][191][Configuration]
 PreloadWeight=0
 
+[Containments][19][Applets][191][Configuration][ConfigDialog]
+DialogHeight=720
+DialogWidth=960
+
 [Containments][19][Applets][192]
 immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][192][Configuration]
-PreloadWeight=73
+PreloadWeight=59
 
 [Containments][19][Applets][192][Configuration][Appearance]
 chartFace=org.kde.ksysguard.horizontalbars
@@ -265,7 +265,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][19][Applets][201][Configuration]
-PreloadWeight=100
+PreloadWeight=84
 
 [Containments][19][Applets][201][Configuration][Appearance]
 chartFace=org.kde.ksysguard.barchart
@@ -326,7 +326,7 @@ floatingInternalGapIsForced=false
 iconSize=34
 inConfigureAppletsMode=true
 lastWindowsVisibilityMode=6
-lengthExtMargin=8
+lengthExtMargin=9
 mouseWheelActions=false
 panelPosition=10
 panelSize=100
@@ -336,11 +336,11 @@ shadowSize=50
 shadows=None
 shadowsUpgraded=true
 solidBackgroundForMaximized=true
-splitterPosition=1
+splitterPosition=4
 splitterPosition2=5
 taskScrollAction=ScrollNone
 tasksUpgraded=true
-thickMargin=29
+thickMargin=24
 titleTooltips=false
 zoomLevel=0
 
